clusters/raspberrypi/apps/adventurelog/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adventurelog
  namespace: adventurelog
  labels:
    app: adventurelog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adventurelog
  template:
    metadata:
      name: adventurelog
      labels:
        app: adventurelog
    spec:
      volumes:
        - name: adventure-journal
          persistentVolumeClaim:
            claimName: adventure-journal-pvc
        - name: adventure-journal-db
          persistentVolumeClaim:
            claimName: adventure-journal-db-pvc
      containers:
        - name: adventure-frontend
          image: ghcr.io/seanmorley15/adventurelog-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
        - name: adventure-db
          image: postgis/postgis:15-3.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: adventure-journal-db
              mountPath: /var/lib/postgresql/data
        - name: adventure-backend
          image: ghcr.io/seanmorley15/adventurelog-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 8000
          volumeMounts:
            - name: adventure-journal
              mountPath: /code/media
      restartPolicy: Always
