clusters/raspberrypi/apps/adventurelog/adventure-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adventure-db-svc
  namespace: adventurelog
spec:
  selector:
    app: adventurelog
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
