clusters/raspberrypi/apps/adventurelog/adventure-frontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adventure-frontend-svc
  namespace: adventurelog
spec:
  selector:
    app: adventurelog
  ports:
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
