clusters/raspberrypi/apps/adventurelog/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: adventurelog
  annotations:
    tailscale.com/tailnet-ip: 100.80.22.65
spec:
  selector:
    app: adventurelog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: base
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
