clusters/raspberrypi/apps/adventurelog/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adventurelog-ingress
  namespace: adventurelog
spec:
  defaultBackend:
    service:
      name: adventure-frontend-svc
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
  - hosts:
    - adventurelog
