clusters/raspberrypi/apps/adventurelog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adventurelog-ingress
  namespace: adventurelog
spec:
  defaultBackend:
    service:
      name: server
      port:
        number: 8000
  ingressClassName: tailscale
  tls:
  - hosts:
    - adventurelog
